[package]
name = "pi_download"
version = "0.1.1"
authors = ["zmax <zmax@gaia.world>"]
edition = "2021"
description = "multi parts download, disconnect to continue connection, redundant download"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["pi", "download"]
repository = "https://github.com/GaiaWorld/pi_download"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes="1.1"
log = "0.4"
pi_time = "0.1"
pi_hash = "0.1"
pi_share = "0.2"
pi_async = "0.5"
pi_rt_file = "0.2"
pi_async_file = "0.4"
futures = "0.3"
flume = "0.10"
pi_enum_default_macro ="0.1"
serde = "1.0"
serde_json = "1.0"
async_httpc = { path = "../pi_net/async_httpc" }
